--- a/index.html
+++ b/index.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
-  <title>Mercadu</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
-  
+  <title>Mercadu - Compras Online</title>
 </head>
 
 <body>
-
   <header>
 	<div class="first-header">
 		<div class="logo"></div>
 		
 		<div class="searchbox">
-			<input type="search">
+			<input class="SearchInput" type="search" placeholder="Pesquise produtos...">
 			<button class="QuerySearch">
-				
+				<svg viewBox="0 0 24 24">
+    				<path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+				</svg>
 			</button>
 		</div>
 		
-		<div class="divider"></div>
-		
-		<div class="profile">
+		<div class="right">
+			<div class="divider"></div>
 			
-		</div>
-		
-		<div class="cart">
+			<div class="notifications">
+				<svg viewBox="0 0 24 24">
+		    		<path d="M16,17H7V10.5C7,8 9,6 11.5,6C14,6 16,8 16,10.5M18,16V10.5C18,7.43 15.86,4.86 13,4.18V3.5A1.5,1.5 0 0,0 11.5,2A1.5,1.5 0 0,0 10,3.5V4.18C7.13,4.86 5,7.43 5,10.5V16L3,18V19H20V18M11.5,22A2,2 0 0,0 13.5,20H9.5A2,2 0 0,0 11.5,22Z" />
+				</svg>
+			</div>
+
+			<div class="profile">
+				<svg viewBox="0 0 24 24">
+				    <path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z" />
+				</svg>
+				<p>Perfil</p>
+			</div>
 			
+			<div class="cart">
+				<svg viewBox="0 0 24 24">
+	    			<path d="M17,18A2,2 0 0,1 19,20A2,2 0 0,1 17,22C15.89,22 15,21.1 15,20C15,18.89 15.89,18 17,18M1,2H4.27L5.21,4H20A1,1 0 0,1 21,5C21,5.17 20.95,5.34 20.88,5.5L17.3,11.97C16.96,12.58 16.3,13 15.55,13H8.1L7.2,14.63L7.17,14.75A0.25,0.25 0 0,0 7.42,15H19V17H7C5.89,17 5,16.1 5,15C5,14.65 5.09,14.32 5.24,14.04L6.6,11.59L3,4H1V2M7,18A2,2 0 0,1 9,20A2,2 0 0,1 7,22C5.89,22 5,21.1 5,20C5,18.89 5.89,18 7,18M16,11L18.78,6H6.14L8.5,11H16Z" />
+				</svg>
+				<p>Carrinho</p>
+			</div>
 		</div>
 	</div>
 	
-	<div class="second-header">
+	<nav class="second-header">
 		
-	</div>
+	</nav>
 </header>
 
 <section class="showcase">
@@ -55,15 +66,27 @@
 	</button>
 	
 	<div class="MoreOffers">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
+		<div class="card">
+			<div class="pic"></div>
+			<p>Todos os Items Farináceos com Desconto</p>
+		</div>
+		<div class="card">
+			<div class="pic"></div>
+			<p>50% de Desconto em Laticíneos</p>
+		</div>
+		<div class="card">
+			<div class="pic"></div>
+			<p>30% de Desconto em Carnes</p>
+		</div>
+		<div class="card">
+			<div class="pic"></div>
+			<p>15% de Desconto em Doces</p>
+		</div>
 	</div>
 </section>
-  
-  
 
+<section class="categories">
+	
+</section>
 </body>
-
 </html>
