--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="logo"></div>
 		
 		<div class="searchbox">
-			<input class="SearchInput" type="search" placeholder="Pesquise produtos...">
+			<input class="SearchInput" type="search" placeholder="Pesquise produtos..." name="SearchInput">
 			<button class="QuerySearch">
 				<svg viewBox="0 0 24 24">
     				<path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
@@ -88,5 +88,43 @@
 <section class="categories">
 	
 </section>
+
+<footer>
+	<div class="newsletter">
+		<p>Receba as melhores promoções no seu email!</p>
+
+		<div>
+			<input type="email" placeholder="Escreva seu email aqui" name="newsletter-email">
+
+			<button class="send-email">
+				Cadastrar!
+			</button>
+		</div>
+	</div>
+	
+	<div class="info">
+		
+	</div>
+
+	<div class="footer-logo"></div>
+
+	<div class="footer-grid">
+		<div class="part institucional">
+			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+		</div>
+
+		<nav class="part footer-nav">
+			
+		</nav>
+
+		<div class="part blog-links">
+			
+		</div>
+
+		<div class="part account">
+			
+		</div>
+	</div>
+</footer>
 </body>
 </html>
