last changes on 01/04

--- a/index.html
+++ b/index.html
@@ -101,10 +101,26 @@
 	</div>
 	
 	<div class="info">
-		<div class="part"></div>
-		<div class="part"></div>
-		<div class="part"></div>
-		<div class="part"></div>
+		<div class="part">
+			<div class="pic"></div>
+			<p>999 999 999</p>
+			<small>De vendas efetuadas</small>
+		</div>
+		<div class="part">
+			<div class="pic"></div>
+			<p>98%</p>
+			<small>De aprovação dos clientes</small>
+		</div>
+		<div class="part">
+			<div class="pic"></div>
+			<p>@omercadu</p>
+			<small>Siga-nos no Instagram!</small>
+		</div>
+		<div class="part">
+			<div class="pic"></div>
+			<p><a href="tel:+5514986022233">(14) 98602 2233</a></p>
+			<small>Fale Conosco (SP e outras regiões)</small>
+		</div>
 	</div>
 
 	<div class="footer-logo"></div>
