fixed header navigation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,54 @@
 	</div>
 	
 	<nav class="second-header">
-		
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic osso"></div>
+				<p>Animais de Estimação</p>
+			</div>
+		</a>
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic frut"></div>
+				<p>Frutas</p>
+			</div>
+		</a>
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic carn"></div>
+				<p>Churrasco</p>
+			</div>
+		</a>
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic lati"></div>
+				<p>Laticínios</p>
+			</div>
+		</a>
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic nomk"></div>
+				<p>Sem Leite</p>
+			</div>
+		</a>
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic doce"></div>
+				<p>Doces e Chocolates</p>
+			</div>
+		</a>
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic higi"></div>
+				<p>Higiene Pessoal</p>
+			</div>
+		</a>
+		<a href="#">
+			<div class="wrapper">
+				<div class="wpic toys"></div>
+				<p>Brinquedos</p>
+			</div>
+		</a>
 	</nav>
 </header>
 
