--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="css/responsive.css">
 
-  <title>Mercadu - Compras Online</title>
+  <title>OMercadu - Compras Online</title>
 </head>
 
 <body>
   <header>
 	<div class="first-header">
+		<button class="menu">
+			<svg viewBox="0 0 24 24">
+    			<path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+			</svg>
+		</button>	
+
 		<div class="logo"></div>
 		
 		<div class="searchbox">
@@ -214,3 +221,6 @@
 </footer>
 </body>
 </html>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script type="text/javascript" src="js/interactions.js"></script>
