from Default to 1024px is responsive now

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<div class="MoreOffers">
 		<div class="card">
 			<div class="pic"></div>
-			<p>Todos os Items Farináceos com Desconto</p>
+			<p>Todos os Farináceos com Desconto</p>
 		</div>
 		<div class="card">
 			<div class="pic"></div>
