--- a/index.html
+++ b/index.html
@@ -291,6 +291,8 @@
 			<label for="password">Senha</label>
 			<input id="password" type="password" name="password">
 
+			<a href="#">Esqueci minha senha...</a>
+
 			<button class="confirmLogin">
 				Fazer Login
 			</button>
