--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	
 	</section>
 
-	<footer>
+<footer>
 	<div class="newsletter">
 		<p>Receba as melhores promoções no seu email!</p>
 
@@ -208,22 +208,22 @@
 	
 	<div class="info">
 		<div class="part">
-			<div class="pic"></div>
+			<div class="pic bag"></div>
 			<p>999 999 999</p>
 			<small>De vendas efetuadas</small>
 		</div>
 		<div class="part">
-			<div class="pic"></div>
+			<div class="pic like"></div>
 			<p>98%</p>
 			<small>De aprovação dos clientes</small>
 		</div>
 		<div class="part">
-			<div class="pic"></div>
+			<div class="pic insta"></div>
 			<p>@omercadu</p>
 			<small>Siga-nos no Instagram!</small>
 		</div>
 		<div class="part">
-			<div class="pic"></div>
+			<div class="pic tel"></div>
 			<p><a href="tel:+5514986022233">(14) 98602 2233</a></p>
 			<small>Fale Conosco (SP e outras regiões)</small>
 		</div>
@@ -270,9 +270,9 @@
 			</ul>
 		</div>
 	</div>
-	</footer>
+</footer>
 
-	<section class="darkFrame">
+<section class="darkFrame">
 	<div class="frame">
 		<button class="close-modal">
 			<svg viewBox="0 0 24 24">
@@ -301,6 +301,7 @@
 				Não tem uma conta? Clique aqui!
 			</p>
 		</div>
+
 		<div class="cadastro">
 			<p class="title">
 				Cadastro
@@ -309,8 +310,8 @@
 			<label for="name">Nome Completo</label>
 			<input id="name" type="text" name="name">
 
-			<label for="email">Endereço de Email</label>
-			<input id="email" type="text" name="email">
+			<label for="c-email">Endereço de Email</label>
+			<input id="c-email" type="email" name="email">
 
 			<label for="c-password">Senha</label>
 			<input id="c-password" type="password" name="c-password">
@@ -318,15 +319,19 @@
 			<label for="confirm-pass">Repita a Senha</label>
 			<input id="confirm-pass" type="password" name="password-confirm">
 
-			<input id="terms" type="checkbox" name="terms">
-			<label for="terms">Lí e concordo com os <a href="#">Termos de Serviço</a></label>
+			
+			<label for="terms">
+				<input id="terms" type="checkbox" name="terms">
+				Lí e concordo com os <a href="#">Termos de Serviço</a>
+			</label>
 
 			<button class="ConfirmSignUp">
 				Criar Conta
 			</button>
 		</div>
 	</div>
-	</section>
+</section>
+
 </body>
 </html>
 
