--- a/index.html
+++ b/index.html
@@ -157,42 +157,58 @@
 	</header>
 
 	<section class="showcase">
-	<p class="beforeH1">
-		Aproveite as promoções
-	</p>
-	
-	<h1>
-		Diversos produtos com Desconto
-	</h1>
-	
-	<button class="showcase-cta">
-		Comprar Agora
-	</button>
-	
-	<div class="MoreOffers">
-		<div class="card">
-			<div class="pic"></div>
-			<p>Todos os Farináceos com Desconto</p>
+		<p class="beforeH1">
+			Aproveite as promoções
+		</p>
+		
+		<h1>
+			Diversos produtos com Desconto
+		</h1>
+		
+		<button class="showcase-cta">
+			Comprar Agora
+		</button>
+		
+		<div class="MoreOffers">
+			<div class="card">
+				<div class="pic"></div>
+				<p>Todos os Farináceos com Desconto</p>
+			</div>
+			<div class="card">
+				<div class="pic"></div>
+				<p>50% de Desconto em Laticíneos</p>
+			</div>
+			<div class="card">
+				<div class="pic"></div>
+				<p>30% de Desconto em Carnes</p>
+			</div>
+			<div class="card">
+				<div class="pic"></div>
+				<p>15% de Desconto em Doces</p>
+			</div>
 		</div>
-		<div class="card">
-			<div class="pic"></div>
-			<p>50% de Desconto em Laticíneos</p>
-		</div>
-		<div class="card">
-			<div class="pic"></div>
-			<p>30% de Desconto em Carnes</p>
-		</div>
-		<div class="card">
-			<div class="pic"></div>
-			<p>15% de Desconto em Doces</p>
-		</div>
-	</div>
 	</section>
 
-	<section class="categories">
-	
+	<section class="content">
+		<div class="MoreOffers2">
+			<div class="card">
+				<div class="pic"></div>
+				<p>Todos os Farináceos com Desconto</p>
+			</div>
+			<div class="card">
+				<div class="pic"></div>
+				<p>50% de Desconto em Laticíneos</p>
+			</div>
+			<div class="card">
+				<div class="pic"></div>
+				<p>30% de Desconto em Carnes</p>
+			</div>
+			<div class="card">
+				<div class="pic"></div>
+				<p>15% de Desconto em Doces</p>
+			</div>
+		</div>
 	</section>
-
 <footer>
 	<div class="newsletter">
 		<p>Receba as melhores promoções no seu email!</p>
@@ -205,7 +221,7 @@
 			</button>
 		</div>
 	</div>
-	
+
 	<div class="info">
 		<div class="part">
 			<div class="pic bag"></div>
@@ -335,5 +351,5 @@
 </body>
 </html>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/interactions.js"></script>
