primeiros banners de desconto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/responsive.css">
 
-  <title>OMercadu - Compras Online</title>
+  <title>Mercadu - Compras Online</title>
 </head>
 
 <body>
@@ -190,7 +190,7 @@
 	</section>
 
 	<section class="content">
-		<div class="MoreOffers2">
+		<div class="MoreOffers2"> <!-- Uma repetição do elemento MoreOffers exclusiva para mobile -->
 			<div class="card">
 				<div class="pic"></div>
 				<p>Todos os Farináceos com Desconto</p>
@@ -207,6 +207,22 @@
 				<div class="pic"></div>
 				<p>15% de Desconto em Doces</p>
 			</div>
+		</div>
+		
+		<!-- Real conteúdo da página -->
+		<div class="bannerWrapper">
+		    <div class="banner img1">
+		        <p class="title">Frango em Desconto</p>
+		        <p class="off">75% OFF</p>
+		    </div>
+		    <div class="banner img2">
+		        <p class="title">Frutas em Desconto</p>
+		        <p class="off">50% OFF</p>
+		    </div>
+		    <div class="banner img3">
+		        <p class="title">Laticínios em Desconto</p>
+		        <p class="off">35% OFF</p>
+		    </div>
 		</div>
 	</section>
 <footer>
