--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <title>Mercadu - Compras Online</title>
 </head>
@@ -212,7 +213,7 @@
 		<!-- Real conteúdo da página -->
 		<div class="bannerWrapper">
 		    <div class="banner img1">
-		        <p class="title">Frango em Desconto</p>
+		        <p class="title">Carnes em Desconto</p>
 		        <p class="off">75% OFF</p>
 		    </div>
 		    <div class="banner img2">
@@ -223,6 +224,45 @@
 		        <p class="title">Laticínios em Desconto</p>
 		        <p class="off">35% OFF</p>
 		    </div>
+		</div>
+
+		<div class="discounts">
+			<h2>Descontos</h2>
+
+			<div class="wrapper">
+				<div class="product-card">
+					<div class="product-image">
+						<p class="off-proportion">
+							-20%
+						</p>	
+					</div>
+					<p class="product-name">
+						Pão de forma Pullmann Tradicional 450g	
+					</p>
+					<p class="true-price">
+						R$9,90
+					</p>
+					<p class="old-price">
+						R$15,90
+					</p>
+
+					<div class="actions">
+						<button class="remove-item">
+							<svg viewBox="0 0 24 24">
+							    <path d="M17,13H7V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+							</svg>
+						</button>
+
+						<button class="to-cart">
+							Adicionar ao carrinho
+						</button>
+					</div>
+				</div>
+			</div>
+
+			<button class="CTA2">
+				Ver mais produtos
+			</button>
 		</div>
 	</section>
 <footer>
