content almost done

--- a/index.html
+++ b/index.html
@@ -231,30 +231,30 @@
 
 			<div class="wrapper">
 				<div class="product-card">
-					<div class="product-image">
-						<p class="off-proportion">
-							-20%
-						</p>	
+					<div class="product-image pao">
+						<button class="off-proportion">
+							20%
+						</button>	
 					</div>
 					<p class="product-name">
 						Pão de forma Pullmann Tradicional 450g	
 					</p>
 					<p class="true-price">
-						R$9,90
+						R$8,00
 					</p>
 					<p class="old-price">
-						R$15,90
+						de R$10,00
 					</p>
 
 					<div class="actions">
-						<button class="remove-item">
+						<button class="remove-item" title="Remover do Carrinho">
 							<svg viewBox="0 0 24 24">
-							    <path d="M17,13H7V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+							    <path d="M19,13H5V11H19V13Z" />
 							</svg>
 						</button>
 
-						<button class="to-cart">
-							Adicionar ao carrinho
+						<button class="to-cart" title="Adicionar ao Carrinho">
+							Adicionar ao Carrinho
 						</button>
 					</div>
 				</div>
@@ -264,7 +264,41 @@
 				Ver mais produtos
 			</button>
 		</div>
+
+		<div class="companies">
+			<h3>Marcas</h3>
+
+
+		</div>
 	</section>
+
+	<section class="categories">
+		<div class="banner img1">
+	        <p class="title">Carnes e Aves</p>
+	        <p class="off">+ de 700 Produtos</p>
+	    </div>
+	    <div class="banner img2">
+	        <p class="title">Farinaceos</p>
+	        <p class="off">+ de 320 Produtos</p>
+	    </div>
+	    <div class="banner img3">
+	        <p class="title">Higiene Pessoal</p>
+	        <p class="off">+ de 210 Produtos</p>
+	    </div>
+	    <div class="banner img4">
+	        <p class="title">Laticínios</p>
+	        <p class="off">+ de 120 Produtos</p>
+	    </div>
+	    <div class="banner img5">
+	        <p class="title">Doces</p>
+	        <p class="off">+ de 700 Produtos</p>
+	    </div>
+	    <div class="banner img6">
+	        <p class="title">Horti-fruti</p>
+	        <p class="off">+ de 130 Produtos</p>
+	    </div>
+	</section>
+
 <footer>
 	<div class="newsletter">
 		<p>Receba as melhores promoções no seu email!</p>
@@ -337,7 +371,7 @@
 			<ul>
 				<li><a href="#">Perfil</a></li>
 				<li><a href="#">Cadastrar-se</a></li>
-				<li><a href="#">Esqueçi a Senha</a></li>
+				<li><a href="#">Esqueci a Senha</a></li>
 				<li><a href="#">Painel Administrativo</a></li>
 			</ul>
 		</div>
