--- a/produtos.html
+++ b/produtos.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/produtos.css">
 
   <title>Mercadu - Compras Online</title>
 </head>
@@ -163,55 +163,22 @@
 		</p>
 		
 		<h1>
-			Diversos produtos com Desconto
+			Descontos de até 75%
 		</h1>
 		
-		<a href="produtos.html">
-			<button class="showcase-cta">
-				Comprar Agora
-			</button>
-		</a>
-
+		<button class="showcase-cta">
+			Comprar Agora
+		</button>
+		
 		<div class="MoreOffers">
-			<div class="card">
-				<div class="pic"></div>
-				<p>Todos os Farináceos com Desconto</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>50% de Desconto em Laticíneos</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>30% de Desconto em Carnes</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>15% de Desconto em Doces</p>
-			</div>
+			
 		</div>
 	</section>
 
 	<section class="content">
-		<div class="MoreOffers2"> <!-- Uma repetição do elemento MoreOffers exclusiva para mobile -->
-			<div class="card">
-				<div class="pic"></div>
-				<p>Todos os Farináceos com Desconto</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>50% de Desconto em Laticíneos</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>30% de Desconto em Carnes</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>15% de Desconto em Doces</p>
-			</div>
-		</div>
-		
+
+		<h2>Descontos</h2>
+
 		<!-- Real conteúdo da página -->
 		<div class="bannerWrapper">
 		    <div class="banner img1">
@@ -229,7 +196,7 @@
 		</div>
 
 		<div class="discounts">
-			<h2>Descontos</h2>
+			<h2>Produtos</h2>
 
 			<div class="wrapper">
 				<div class="product-card">
@@ -262,11 +229,9 @@
 				</div>
 			</div>
 
-			<a href="produtos.html">
-				<button class="CTA2">
-					Ver mais produtos
-				</button>
-			</a>
+			<button class="CTA2">
+				Ver mais produtos
+			</button>
 		</div>
 
 		<div class="companies">
@@ -274,33 +239,6 @@
 
 
 		</div>
-	</section>
-
-	<section class="categories">
-		<div class="banner img1">
-	        <p class="title">Carnes e Aves</p>
-	        <p class="off">+ de 700 Produtos</p>
-	    </div>
-	    <div class="banner img2">
-	        <p class="title">Farinaceos</p>
-	        <p class="off">+ de 320 Produtos</p>
-	    </div>
-	    <div class="banner img3">
-	        <p class="title">Higiene Pessoal</p>
-	        <p class="off">+ de 210 Produtos</p>
-	    </div>
-	    <div class="banner img4">
-	        <p class="title">Laticínios</p>
-	        <p class="off">+ de 120 Produtos</p>
-	    </div>
-	    <div class="banner img5">
-	        <p class="title">Doces</p>
-	        <p class="off">+ de 700 Produtos</p>
-	    </div>
-	    <div class="banner img6">
-	        <p class="title">Horti-fruti</p>
-	        <p class="off">+ de 130 Produtos</p>
-	    </div>
 	</section>
 
 <footer>
