--- a/result.html
+++ b/result.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/produtos.css">
 
-  <title>Mercadu - Compras Online</title>
+  <title>Mercadu - Resultados de busca para "NOME DO PRODUTO"</title>
 </head>
 
 <body>
@@ -157,91 +157,21 @@
 		</nav>
 	</header>
 
-	<section class="showcase">
-		<p class="beforeH1">
-			Aproveite as promoções
-		</p>
-		
-		<h1>
-			Descontos de até 75%
-		</h1>
-		
-		<button class="showcase-cta">
-			Comprar Agora
-		</button>
-		
-		<div class="MoreOffers">
-			<input type="search" name="">
-		</div>
-	</section>
-
 	<section class="content">
+		<div class="topbox">
+			<h2>Resultados da Pesquisa</h2>
 
-		<h2>Descontos</h2>
-
-		<!-- Real conteúdo da página -->
-		<div class="bannerWrapper">
-		    <div class="banner img1">
-		        <p class="title">Carnes em Desconto</p>
-		        <p class="off">75% OFF</p>
-		    </div>
-		    <div class="banner img2">
-		        <p class="title">Frutas em Desconto</p>
-		        <p class="off">50% OFF</p>
-		    </div>
-		    <div class="banner img3">
-		        <p class="title">Laticínios em Desconto</p>
-		        <p class="off">35% OFF</p>
-		    </div>
+			<p class="description">Estes são os resultados encontrados para o produto "NOME DO PRODUTO".</p>
 		</div>
 
-		<div class="discounts">
-			<h2>Produtos</h2>
-
-			<div class="wrapper">
-				<div class="product-card">
-					<div class="product-image pao">
-						<button class="off-proportion">
-							20%
-						</button>	
-					</div>
-					<p class="product-name">
-						Pão de forma Pullmann Tradicional 450g	
-					</p>
-					<p class="true-price">
-						R$8,00
-					</p>
-					<p class="old-price">
-						de R$10,00
-					</p>
-
-					<div class="actions">
-						<button class="remove-item" title="Remover do Carrinho">
-							<svg viewBox="0 0 24 24">
-							    <path d="M19,13H5V11H19V13Z" />
-							</svg>
-						</button>
-
-						<button class="to-cart" title="Adicionar ao Carrinho">
-							Adicionar ao Carrinho
-						</button>
-					</div>
-				</div>
+		<div class="results">
+			<div class="product">
+				
 			</div>
-
-			<button class="CTA2">
-				Ver mais produtos
-			</button>
-		</div>
-
-		<div class="companies">
-			<h3>Marcas</h3>
-
-
 		</div>
 	</section>
 
-<footer>
+	<footer>
 	<div class="newsletter">
 		<p>Receba as melhores promoções no seu email!</p>
 
@@ -318,9 +248,9 @@
 			</ul>
 		</div>
 	</div>
-</footer>
+	</footer>
 
-<section class="darkFrame">
+	<section class="darkFrame">
 	<div class="frame">
 		<button class="close-modal">
 			<svg viewBox="0 0 24 24">
@@ -378,8 +308,7 @@
 			</button>
 		</div>
 	</div>
-</section>
-
+	</section>
 </body>
 </html>
 
