correções em produtos
correções na grande barra de pesquisa na página produtos

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						</table>
 						
 						<button class="checkout">
-							Ir para Entrega
+							Checkout
 						</button>
 				</div>
 			</div>
