--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 				</svg>
 			</button>	
 
-			<div class="logo"></div>
+			<a href="index.html">
+				<div class="logo"></div>
+			</a>
 			
 			<div class="searchbox">
 				<input class="SearchInput" type="search" placeholder="Pesquise produtos..." name="SearchInput">
@@ -168,7 +170,7 @@
 			Diversos produtos com Desconto
 		</h1>
 		
-		<a href="produtos.html">
+		<a href="products.html">
 			<button class="showcase-cta">
 				Comprar Agora
 			</button>
