--- a/result.html
+++ b/result.html
@@ -22,7 +22,9 @@
 				</svg>
 			</button>	
 
-			<div class="logo"></div>
+			<a href="index.html">
+				<div class="logo"></div>
+			</a>
 			
 			<div class="searchbox">
 				<input class="SearchInput" type="search" placeholder="Pesquise produtos..." name="SearchInput">
