--- a/products.html
+++ b/products.html
@@ -22,8 +22,10 @@
 				</svg>
 			</button>	
 
-			<div class="logo"></div>
-			
+			<a href="index.html">
+				<div class="logo"></div>
+			</a>
+
 			<div class="searchbox">
 				<input class="SearchInput" type="search" placeholder="Pesquise produtos..." name="SearchInput">
 				<button class="QuerySearch">
@@ -166,8 +168,8 @@
 			Descontos de até 75%
 		</h1>
 		
-		<button class="showcase-cta">
-			Comprar Agora
+		<button id="go-to-search" class="showcase-cta">
+			Pesquisar Produtos
 		</button>
 		
 		<div class="MoreOffers">
@@ -219,7 +221,7 @@
 				</div>
 			</div>
 
-			<button class="StartSearch">
+			<button class="StartSearch" title="Pesquisar">
 				<svg viewBox="0 0 24 24">
 				    <path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
 				</svg>
@@ -417,6 +419,10 @@
 			<button class="ConfirmSignUp">
 				Criar Conta
 			</button>
+		</div>
+
+		<div class="product-modal">
+			
 		</div>
 	</div>
 </section>
