--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
   <link rel="icon" type="image/png" href="img/favicon.png" />
+  <link rel="manifest" href="https://mayrinck.github.io/mercadu-frontend/manifest.json">
   <link rel="stylesheet" href="thirdParty/OwlCarousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="thirdParty/OwlCarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/default.css">
@@ -183,7 +184,7 @@
 			</div>
 			<div class="card">
 				<div class="pic"></div>
-				<p>50% de Desconto em Laticíneos</p>
+				<p>50% de Desconto em Laticínios</p>
 			</div>
 			<div class="card">
 				<div class="pic"></div>
