--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 				</div>
 			</div>
 
-			<a href="produtos.html">
+			<a href="products.html">
 				<button class="CTA2">
 					Ver mais produtos
 				</button>
