finalizando página de produtos

--- a/perfil.html
+++ b/perfil.html
@@ -6,14 +6,11 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
   <link rel="icon" type="image/png" href="img/favicon.png" />
-  <link rel="manifest" href="https://mayrinck.github.io/mercadu-frontend/manifest.json">
-  <link rel="stylesheet" href="thirdParty/OwlCarousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="thirdParty/OwlCarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/perfil.css">
 
-  <title>Mercadu - Compras Online</title>
+  <title>Perfil - Mercadu</title>
 </head>
 
 <body>
@@ -156,61 +153,7 @@
 		</nav>
 	</header>
 
-	<section class="showcase">
-		<p class="beforeH1">
-			Aproveite as promoções
-		</p>
-		
-		<h1>
-			Diversos produtos com Desconto
-		</h1>
-		
-		<a href="products.html">
-			<button class="showcase-cta">
-				Comprar Agora
-			</button>
-		</a>
-
-		<div class="MoreOffers">
-			<div class="card">
-				<div class="pic"></div>
-				<p>Todos os Farináceos com Desconto</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>50% de Desconto em Laticínios</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>30% de Desconto em Carnes</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>15% de Desconto em Doces</p>
-			</div>
-		</div>
-	</section>
-
 	<section class="content">
-		<div class="MoreOffers2"> <!-- Uma repetição do elemento MoreOffers exclusiva para mobile -->
-			<div class="card">
-				<div class="pic"></div>
-				<p>Todos os Farináceos com Desconto</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>50% de Desconto em Laticíneos</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>30% de Desconto em Carnes</p>
-			</div>
-			<div class="card">
-				<div class="pic"></div>
-				<p>15% de Desconto em Doces</p>
-			</div>
-		</div>
-		
 		<!-- Real conteúdo da página -->
 		<div class="bannerWrapper">
 		    <div class="banner img1">
@@ -227,110 +170,7 @@
 		    </div>
 		</div>
 
-		<div class="discounts">
-			<h2>Descontos</h2>
 
-			<div class="wrapper">
-				<div class="product-card">
-					<div class="product-image pao">
-						<button class="off-proportion">
-							20%
-						</button>	
-					</div>
-					<p class="product-name">
-						Pão de forma Pullmann Tradicional 450g	
-					</p>
-					<p class="true-price">
-						R$8,00
-					</p>
-					<p class="old-price">
-						de R$10,00
-					</p>
-
-					<div class="actions">
-						<button class="remove-item" title="Remover do Carrinho">
-							<svg viewBox="0 0 24 24">
-							    <path d="M19,13H5V11H19V13Z" />
-							</svg>
-						</button>
-
-						<button class="to-cart" title="Adicionar ao Carrinho">
-							Adicionar ao Carrinho
-						</button>
-					</div>
-				</div>
-			</div>
-
-			<a href="products.html">
-				<button class="CTA2">
-					Ver mais produtos
-				</button>
-			</a>
-		</div>
-
-		<div class="companies">
-			<h3>Marcas</h3>
-
-			<div class="owl-carousel">
-			  <div>
-			  	<img src="img/marcas/pullman.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/nissin.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/friboi.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/pampers.png">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/sadia.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/italac.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/lacta.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/nestle.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/hersheys.jpg">
-			  </div>
-			  <div>
-			  	<img src="img/marcas/ambev.jpg">
-			  </div>
-			</div>
-		</div>
-	</section>
-
-	<section class="categories">
-		<div class="banner img1">
-	        <p class="title">Carnes e Aves</p>
-	        <p class="off">+ de 700 Produtos</p>
-	    </div>
-	    <div class="banner img2">
-	        <p class="title">Farinaceos</p>
-	        <p class="off">+ de 320 Produtos</p>
-	    </div>
-	    <div class="banner img3">
-	        <p class="title">Higiene Pessoal</p>
-	        <p class="off">+ de 210 Produtos</p>
-	    </div>
-	    <div class="banner img4">
-	        <p class="title">Laticínios</p>
-	        <p class="off">+ de 120 Produtos</p>
-	    </div>
-	    <div class="banner img5">
-	        <p class="title">Doces</p>
-	        <p class="off">+ de 700 Produtos</p>
-	    </div>
-	    <div class="banner img6">
-	        <p class="title">Horti-fruti</p>
-	        <p class="off">+ de 130 Produtos</p>
-	    </div>
 	</section>
 
 <footer>
