Modal de detalhes do produto concluido

--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="https://mayrinck.github.io/mercadu-frontend/manifest.json">
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="css/produtos.css">
+  <link rel="stylesheet" href="css/products.css">
 
   <title>Mercadu - Indice de Produtos</title>
 </head>
@@ -230,7 +230,7 @@
 
 			<div class="wrapper">
 				<div class="product-card">
-					<div class="product-image pao">
+					<div class="product-image pao" title="Clique para ver mais detalhes">
 						<button class="off-proportion">
 							20%
 						</button>
@@ -368,7 +368,7 @@
 </footer>
 
 <section class="darkFrame">
-	<div class="frame">
+	<div class="frame large">
 		<button class="close-modal">
 			<svg viewBox="0 0 24 24">
 			    <path d="M13.46,12L19,17.54V19H17.54L12,13.46L6.46,19H5V17.54L10.54,12L5,6.46V5H6.46L12,10.54L17.54,5H19V6.46L13.46,12Z" />
@@ -426,7 +426,35 @@
 		</div>
 
 		<div class="product-modal">
+      <div class="stats">
+        <div class="product-image pao"></div>
+        <p class="product-price">
+          R$ 8,00
+        </p>
+        <p class="product-name">
+          Pão de Forma tradicional Pullman 450g
+        </p>
+        <p class="product-owner">
+          Marca: Pullman
+        </p>
+      </div>
 
+      <div class="description">
+        <p class="title">
+          Descrição do Produto
+        </p>
+
+        <p class="text">
+          O pão de forma tradicional Pullman é feito a partir do trigo
+          de melhor qualidade retirada das colheitas selecionadas da fábrica.
+          Passa por um processo quase manual para criar a consistência e o
+          sabor que só este pão tem.
+        </p>
+      </div>
+
+      <button class="buy">
+        Adicionar ao Carrinho
+      </button>
 		</div>
 	</div>
 </section>
