--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/profile.css">
 
-  <title>Perfil - Mercadu</title>
+  <title>Seu Perfil - Mercadu</title>
 </head>
 
 <body>
