container do perfil criado

--- a/profile.html
+++ b/profile.html
@@ -171,10 +171,10 @@
 
   <div class="profile-container">
     <aside>
-      <div class="info">
+      <div class="user-info">
         <p class="name">Nome do Usuário</p>
-        <p class="card-number">
-          3316-4412-6754-9843
+        <p class="rank">
+          Cliente
         </p>
       </div>
       <button>
