Adicionando links ausentes

--- a/profile.html
+++ b/profile.html
@@ -94,9 +94,11 @@
 						    </tr>
 						</table>
 
-						<button class="checkout">
-							Checkout
-						</button>
+            <a href="checkout.html">
+  						<button class="checkout">
+  							Checkout
+  						</button>
+            </a>
 				</div>
 			</div>
 		</div>
@@ -191,7 +193,10 @@
       </button>
     </aside>
     <div class="section-container">
-
+      <div class="personal-info"></div>
+      <div class="adress-info"></div>
+      <div class="payment-info"></div>
+      <div class="account-info"></div>
     </div>
   </div>
 
