--- a/products.html
+++ b/products.html
@@ -95,9 +95,11 @@
 						    </tr>
 						</table>
 
-						<button class="checkout">
-							Checkout
-						</button>
+            <a href="checkout.html">
+  						<button class="checkout">
+  							Checkout
+  						</button>
+            </a>
 				</div>
 			</div>
 		</div>
