responsive elements almost ready

--- a/index.html
+++ b/index.html
@@ -471,6 +471,38 @@
 				Criar Conta
 			</button>
 		</div>
+
+    <div class="product-modal">
+      <div class="stats">
+        <div class="product-image pao"></div>
+        <p class="product-price">
+          R$ 8,00
+        </p>
+        <p class="product-name">
+          Pão de Forma tradicional Pullman 450g
+        </p>
+        <p class="product-owner">
+          Marca: Pullman
+        </p>
+      </div>
+
+      <div class="description">
+        <p class="title">
+          Descrição do Produto
+        </p>
+
+        <p class="text">
+          O pão de forma tradicional Pullman é feito a partir do trigo
+          de melhor qualidade retirada das colheitas selecionadas da fábrica.
+          Passa por um processo quase manual para criar a consistência e o
+          sabor que só este pão tem.
+        </p>
+      </div>
+
+      <button class="buy">
+        Adicionar ao Carrinho
+      </button>
+		</div>
 	</div>
 </section>
 
