--- a/profile.html
+++ b/profile.html
@@ -155,22 +155,7 @@
 	</header>
 
 	<section class="content">
-		<!-- Real conteúdo da página -->
-		<div class="bannerWrapper">
-		    <div class="banner img1">
-		        <p class="title">Carnes em Desconto</p>
-		        <p class="off">75% OFF</p>
-		    </div>
-		    <div class="banner img2">
-		        <p class="title">Frutas em Desconto</p>
-		        <p class="off">50% OFF</p>
-		    </div>
-		    <div class="banner img3">
-		        <p class="title">Laticínios em Desconto</p>
-		        <p class="off">35% OFF</p>
-		    </div>
-		</div>
-
+	<!-- Real conteúdo da página -->
   <div class="profile-container">
     <aside>
       <div class="user-info">
@@ -179,28 +164,53 @@
           Cliente
         </p>
       </div>
-      <button>
-        Informações Pessoais
+      <button class="active">
+        <svg viewBox="0 0 24 24">
+            <path d="M2,3H22C23.05,3 24,3.95 24,5V19C24,20.05 23.05,21 22,21H2C0.95,21 0,20.05 0,19V5C0,3.95 0.95,3 2,3M14,6V7H22V6H14M14,8V9H21.5L22,9V8H14M14,10V11H21V10H14M8,13.91C6,13.91 2,15 2,17V18H14V17C14,15 10,13.91 8,13.91M8,6A3,3 0 0,0 5,9A3,3 0 0,0 8,12A3,3 0 0,0 11,9A3,3 0 0,0 8,6Z" />
+        </svg>
+        <span>
+          Informações Pessoais
+        </span>
       </button>
       <button>
-        Endereços de Entrega
+        <svg viewBox="0 0 24 24">
+            <path d="M3,4A2,2 0 0,0 1,6V17H3A3,3 0 0,0 6,20A3,3 0 0,0 9,17H15A3,3 0 0,0 18,20A3,3 0 0,0 21,17H23V12L20,8H17V4M10,6L14,10L10,14V11H4V9H10M17,9.5H19.5L21.47,12H17M6,15.5A1.5,1.5 0 0,1 7.5,17A1.5,1.5 0 0,1 6,18.5A1.5,1.5 0 0,1 4.5,17A1.5,1.5 0 0,1 6,15.5M18,15.5A1.5,1.5 0 0,1 19.5,17A1.5,1.5 0 0,1 18,18.5A1.5,1.5 0 0,1 16.5,17A1.5,1.5 0 0,1 18,15.5Z" />
+        </svg>
+        <span>
+          Endereços de Entrega
+        </span>
       </button>
       <button>
-        Pagamento
+        <svg viewBox="0 0 24 24">
+            <path d="M21,8V6H7V8H21M21,16V11H7V16H21M21,4A2,2 0 0,1 23,6V16A2,2 0 0,1 21,18H7C5.89,18 5,17.1 5,16V6C5,4.89 5.89,4 7,4H21M3,20H18V22H3A2,2 0 0,1 1,20V9H3V20Z" />
+        </svg>
+        <span>
+          Cartões de Crédito
+        </span>
       </button>
       <button>
-        Conta
+        <svg viewBox="0 0 24 24">
+            <path d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M17.13,17C15.92,18.85 14.11,20.24 12,20.92C9.89,20.24 8.08,18.85 6.87,17C6.53,16.5 6.24,16 6,15.47C6,13.82 8.71,12.47 12,12.47C15.29,12.47 18,13.79 18,15.47C17.76,16 17.47,16.5 17.13,17Z" />
+        </svg>
+        <span>
+          Segurança da Conta
+        </span>
       </button>
     </aside>
     <div class="section-container">
       <div class="personal-info">
-          <p class="name">
-              Nome: <span id="data-name">Nome do Usuário</span>
-          </p>
-          
-          <p class="email">
-              E-Mail: <span>username@mail.com</span>
-          </p>
+          <label for="data-name">Nome:</label>
+          <input class="changer" id="data-name" type="text" value="Nome Completo do Usuário" disabled>
+
+          <label for="data-mail">E-Mail:</label>
+          <input class="changer" id="data-mail" type="email" value="username@mail.com">
+
+          <label for="data-phone">Telefone:</label>
+          <input class="changer" id="data-phone" type="tel" value="(11) 91234 5678">
+
+          <button id="save-info">
+            Salvar Alterações
+          </button>
       </div>
       <div class="adress-info"></div>
       <div class="payment-info"></div>
@@ -208,6 +218,20 @@
     </div>
   </div>
 
+  <div class="bannerWrapper">
+      <div class="banner img1">
+          <p class="title">Carnes em Desconto</p>
+          <p class="off">75% OFF</p>
+      </div>
+      <div class="banner img2">
+          <p class="title">Frutas em Desconto</p>
+          <p class="off">50% OFF</p>
+      </div>
+      <div class="banner img3">
+          <p class="title">Laticínios em Desconto</p>
+          <p class="off">35% OFF</p>
+      </div>
+  </div>
 	</section>
 
 <footer>
